--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BIA HOI カタコト - 狸小路9丁目</title>
+    <title>BIA HOI カタコト - 狸小路9丁目のベトナム屋台とビール</title>
+    <meta name="description"
+        content="ベトナム料理 ビール 小さい屋台。Draft cold beer ... Tiger beer , Hoegaarden white , craft beer .. old school street food cuisine . Have a nice find something nice." />
+    <meta name="keywords"
+        content="札幌,狸小路,ベトナム料理,ビアホイ,カタコト,ビール,クラフトビール,タイガービール,ヒューガルデン,Tiger beer,Hoegaarden,craft beer,street food" />
+    <meta name="google-site-verification" content="BxZuQcdRBAq3xQ9s_eqrhf_J_GRHboblDeD0bpKfeI8" />
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Press+Start+2P&display=swap"
         rel="stylesheet" />
     <style>
@@ -648,7 +653,6 @@
             <div class="press-start" id="start-text">PUSH START BUTTON</div>
             <p style="margin-top: 20px; font-size: 0.7rem; color: #888;">
                 2015 BIA HOI KATAKOTO<br>
-
             </p>
         </div>
 
